# BitTorrent-Parser

./: CMakeLists.txt  LICENSE
include/: bencode.h  config.h  network.h  peer.h  piece.h  torrent.h  tracker.h
src/: bencode.c  main.c  oldBencode.c  piece.c  torrent.c
